# nlp-dashboard

./: .gitignore  pyproject.toml
data/: sample_message.json  user_messages.json
db/: schema.sql
docs/: research-nlp-sales-conversations.md
docs/superpowers/plans/: 2026-07-01-conversation-signals.md
docs/superpowers/specs/: 2026-07-01-conversation-signals-design.md
noteboooks/: data_exploration.ipynb
src/: app.py  extract_user_messages.py  main.py
src/analysis/: markov.py  patterns.py  sentiment.py  taxonomy.py
src/extraction/: clustering.py  labeler.py  outcome.py  pipeline.py  signals.py
src/utils/: chat.py  data.py
tests/: test_labeler_parse.py  test_markov.py  test_patterns.py  test_sentiment.py  test_taxonomy.py
