[project]
name = "nlp-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]
