[project]
name = "nlp-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.112.0",
    "hdbscan>=0.8.44",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "openai>=1.0.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "umap-learn>=0.5.12",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
